--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-		<title>Matthew Vaden</title>
-	</head>
-		<body>
-<header>
-<div id="header">
-<h1>Who is Matthew Vaden, you might ask?</h1>
-</div>
-</header>
-<p lang="en-us"><img style="height: 400px; width: 267;" src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" alt="headshot" /></p>
-<article><!--<div id="article"><p>I am Junior Web Developer and Software&nbsp;Engineer. I solve problems by creating solutions - whether designing your next website or building complex databases for applications. I'm passionatiate about the learning new frameworks&nbsp;and creating intuitive and interactive environments, regardless to technical experience.</p>-->--&gt;</article>
-<p lang="en-us">&nbsp;</p>
-<hr />
-<section>
-<div id="section">
-<h3>A little more about me:</h3>
-<p>- I grew up in southern New Jersey.</p>
-<p>- But now I live in Washington D.C.</p>
-<p>- I used to work&nbsp;in civic&nbsp;outreach and higher education.</p>
-<p>- But now, I'm a full-stack developer who is self-taught.</p>
-<p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project)</a>, and we have an awesome cockapoo named "Waylon".</p>
-<p>- I enjoy reading, writing and learning.</p>
-<p>- I love traveling and going to live shows.</p>
-<p>- After a busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4">Blueberry Smash</a> or two!</p>
-<p>- I go absolutely nuts for pizza and <a href="http://www.wafc.org"> ultimate frisbee</a>.</p>
-<p>- I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
-</div>
-</section>
-<p lang="en-us">&nbsp;</p>
-<hr />
-<section>
-<div id="section">
-<p>Feel free to <a href="mailto:matthewvaden@gmail.com">contact me</a>, directly.</p>
-</div>
-</section>
-<p lang="en-us">&nbsp;</p>
-<nav>
-<div id="nav">
-<p>You can also:</p>
-<ul>
-<li><a href="https://www.facebook.com/mvaden?ref=br_rs">Facebook me</a></li>
-<li><a href="https://www.instagram.com/abovtheinfluinc/">Instagram me</a></li>
-<li><a href="https://twitter.com/AbovTheInfluinc">Tweet me</a></li>
-<li><a href="http://codepen.io/mvaden/pens/public/">CodePen me</a></li>
-</ul>
-</div>
-</nav>
+
+<head>
+	<title>Matthew Vaden</title>
+</head>
+
+<body>
+	<p lang="en-us">
+
+		<header>
+			<div id="header">
+				<h1>Who is Matthew Vaden, you might ask?</h1>
+			</div>
+		</header>
+
+		<div class="header">
+			<h2>You've come to the right place!</h2>
+		</div>
+
+		<img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" alt="headshot" style="height:400px;width:267;" />
+
+		<div class="article">
+			<p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
+		</div>
+		<br />
+		<hr />
+
+		<div class="section">
+			<h3>More about me:</h3>
+			<p>- I grew up in southern New Jersey.</p>
+			<p>- But now I live in Washington D.C.</p>
+			<p>- For awhile, I worked in government and higher education.</p>
+			<p>- But now, I'm a self-taught full-stack developer.</p>
+			<p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project)</a>, and we have an awesome cockapoo named "Waylon".</p>
+			<p>- I enjoy reading, writing and learning.</p>
+			<p>- I love traveling and going to live shows.</p>
+			<p>- After a busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4">Blueberry Smash</a> or two!</p>
+			<p>- I go absolutely nuts for pizza and <a href="http://www.wafc.org"> ultimate frisbee</a>.</p>
+			<p>- I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
+		</div>
+		<br />
+		<hr />
+
+		<div id="section">
+			<p>Feel free to <a href="mailto:matthewvaden@gmail.com">contact me</a>, directly.</p>
+		</div>
+		<br />
+
+		<nav>
+			<div id="nav">
+				<p>You can also:
+					<ul>
+						<li><a href="https://www.facebook.com/mvaden?ref=br_rs" </a>Facebook me</li>
+						<li><a href="https://www.instagram.com/abovtheinfluinc/" </a>Instagram me</li>
+						<li><a href="https://twitter.com/AbovTheInfluinc" </a>Tweet me</li>
+						<li><a href="http://codepen.io/mvaden/pens/public/" </a>CodePen me</li>
+						<li><a href="https://github.com/mvaden/Project_1" </a>View My Trivia App </a></li>
+            <li><a href="https://github.com/mvaden" </a>Check out my GitHub </a></li>
+					</ul>
+			</div>
+		</nav>
+
 </body>
+
 </html>
