Added href tag on line 43. Deleted index_backup.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>- But now I live in Washington D.C.</p>
       <p>- For awhile, I worked in government and higher education.</p>
       <p>- But now, I'm a self-taught full-stack developer.</p>
-      <p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project)</a>, and we have an awesome cockapoo named "Waylon".</p>
+      <p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project</a>), and we have an awesome cockapoo named <a href="https://www.instagram.com/waylonthecockapoo"/>"Waylon"</a>.</p>
       <p>- I enjoy reading, writing and learning.</p>
       <p>- I love traveling and going to live shows.</p>
       <p>- After a busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4">Blueberry Smash</a> or two!</p>
