Added href tag at line 44.

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     <div class="contianer-fluid">
       <h3>More about me:</h3>
       <p>- I grew up in southern New Jersey.</p>
-      <p>- But now I live in Washington D.C.</p>
-      <p>- For awhile, I worked in government and higher education.</p>
-      <p>- But now, I'm a self-taught full-stack developer.</p>
-      <p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project</a>), and we have an awesome cockapoo named <a href="https://www.instagram.com/waylonthecockapoo"/>"Waylon"</a>.</p>
-      <p>- I enjoy reading, writing and learning.</p>
+      <p>- But now I live in Washington, D.C.</p>
+      <p>- For awhile, I worked in government and volunteered in higher education.</p>
+      <p>- But now, I'm a full-stack web developer.</p>
+      <p>- I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo"/>Waylon</a>.</p>
+      <p>- I enjoy <a href="https://www.goodreads.com/review/list/16216182">reading</a>, writing and learning.</p>
       <p>- I love traveling and going to live shows.</p>
-      <p>- After a busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4">Blueberry Smash</a> or two!</p>
-      <p>- I go absolutely nuts for pizza and <a href="http://www.wafc.org"> ultimate frisbee</a>.</p>
+      <p>- After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4">Blueberry Smash</a> or two!</p>
+      <p>- I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org"> ultimate frisbee</a>.</p>
       <p>- I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
     </div>
     <br />
@@ -57,16 +57,14 @@
 
     <nav>
       <div class="container-fluid">
-        <p>You can also:
+        <p>You can also:</p>
           <ul>
             <li><a href="https://www.facebook.com/mvaden?ref=br_rs" </a>Facebook me</li>
             <li><a href="https://www.instagram.com/abovtheinfluinc/" </a>Instagram me</li>
             <li><a href="https://twitter.com/AbovTheInfluinc" </a>Tweet me</li>
             <li><a href="http://codepen.io/mvaden/pens/public/" </a>CodePen me</li>
-            <li><a href="https://github.com/mvaden/Project_1" </a>View My Trivia App </a>
-            </li>
-            <li><a href="https://github.com/mvaden" </a>Check out my GitHub </a>
-            </li>
+            <li><a href="https://github.com/mvaden/Project_1" </a>Play a little trivia </a></li>
+            <li><a href="https://github.com/mvaden" </a>Check out my GitHub </a></li>
           </ul>
       </div>
     </nav>
