Branched repofor bootstrap development.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+  
     <header>
       <div class="container" id="header1">
         <h1>Who is Matthew Vaden, you might ask?</h1>
@@ -25,15 +25,15 @@
       <h2>You've come to the right place!</h2>
     </div>
 
-    <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id=portrait alt="headshot" style="height:400px; width:267;" />
+    <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id= "portrait" class="img-responsive" alt="headshot" style="height:400px; width:267;" />
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="brand_statement">
       <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
     </div>
     <br />
     <hr />
 
-    <div class="contianer-fluid">
+    <div class="contianer-fluid" id="about_me">
       <h3>More about me:</h3>
       <p>I grew up in southern New Jersey.</p>
       <p>But now I live in Washington, D.C.</p>
@@ -49,7 +49,7 @@
     <br />
     <hr />
 
-    <div class="container-fluid" id= "email">
+    <div class="container-fluid" id="email">
       <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
     </div>
     <br />
