--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html>
 
@@ -16,54 +17,57 @@
 <body>
 
     <header>
-      <div class="container" id="header1">
-        <h1>Who is Matthew Vaden, you might ask?</h1>
+      <div class="container" id="header">
+        <h1>Matthew (aka, Matt) Vaden</h1>
       </div>
     </header>
 
-    <div class="container" id="header2">
-      <h2>You've come to the right place!</h2>
-    </div>
+    <section>
+      <div class="container" id="image">
+        <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="headshot" style="height:400px; width:267;" />
+      </div>
+      <div class="container-fluid">
+        <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
+      </div>
+      <br />
+      <hr />
+    </section>
 
-    <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id=portrait alt="headshot" style="height:400px; width:267;" />
+    <main>
+      <div class="contianer-fluid">
+        <h3>More about me:</h3>
+        <p>I grew up in southern New Jersey.</p>
+        <p>But now I live in Washington, D.C.</p>
+        <p>For awhile, I worked in government and volunteered in higher education.</p>
+        <p>But now, I'm a full-stack web developer.</p>
+        <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
+        <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing and learning.</p>
+        <p>I love traveling and going to live shows.</p>
+        <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
+        <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
+        <p>I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
+      </div>
+      <br />
+      <hr />
+    </main>
 
-    <div class="container-fluid">
-      <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
-    </div>
-    <br />
-    <hr />
-
-    <div class="contianer-fluid">
-      <h3>More about me:</h3>
-      <p>I grew up in southern New Jersey.</p>
-      <p>But now I live in Washington, D.C.</p>
-      <p>For awhile, I worked in government and volunteered in higher education.</p>
-      <p>But now, I'm a full-stack web developer.</p>
-      <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
-      <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing and learning.</p>
-      <p>I love traveling and going to live shows.</p>
-      <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
-      <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
-      <p>I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
-    </div>
-    <br />
-    <hr />
-
-    <div class="container-fluid" id= "email">
-      <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
-    </div>
-    <br />
+    <address>
+      <div class="container-fluid" id= "email">
+        <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
+      </div>
+      <br />
+    </address>
 
     <nav>
       <div class="container-fluid" id="social_media">
         <p>You can also:</p>
           <ul>
-            <li><a href="https://www.facebook.com/mvaden?ref=br_rs" target="blank"</a>Facebook me</li>
-            <li><a href="https://www.instagram.com/abovtheinfluinc/" target="blank"</a>Instagram me</li>
-            <li><a href="https://twitter.com/AbovTheInfluinc" target="blank"</a>Tweet me</li>
-            <li><a href="http://codepen.io/mvaden/pens/public/" target="blank"</a>CodePen me</li>
-            <li><a href="https://github.com/mvaden/Project_1" target="blank"</a>Play a little trivia </a></li>
-            <li><a href="https://github.com/mvaden" target="blank"</a>Check out my GitHub </a></li>
+            <a href="https://www.facebook.com/mvaden?ref=br_rs" target="blank"><li>Facebook me </li></a>
+            <a href="https://www.instagram.com/abovtheinfluinc/" target="blank"><li>Instagram me </li></a>
+            <a href="https://twitter.com/AbovTheInfluinc" target="blank"><li>Tweet me </li></a>
+            <a href="http://codepen.io/mvaden/pens/public/" target="blank"><li>CodePen me </li></a>
+            <a href="https://github.com/mvaden/Project_1" target="blank"><li>Play a little trivia </li></a>
+            <a href="https://github.com/mvaden" target="blank"><li>Check out my GitHub </li></a>
           </ul>
       </div>
     </nav>
