Reorganized hrefs for social media, github, and contact info.

--- a/index.html
+++ b/index.html
@@ -3,74 +3,96 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Matthew Vaden</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Matthew Vaden</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- Bootstrap enabled CSS -->
+    <link rel="stylesheet" href="bootstrap-social.css">
+
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!--load font awesome-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-      <div class="container" id="header">
-        <h1>Matthew (aka, Matt) Vaden</h1>
-      </div>
+        <div class="container" id="header">
+            <h1>Matthew (aka, "Matt") Vaden</h1>
+        </div>
+        <br />
     </header>
 
-    <section>
-      <div class="container" id="image">
-        <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="headshot" style="height:400px; width:267;" />
-      </div>
-      <div class="container-fluid">
-        <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
-      </div>
-      <br />
-      <hr />
+    <section class="my_headshot">
+        <div class="container" id="image">
+            <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="my headshot" style="height:400px; width:267;">
+        </div>
+        <br />
+        <br />
+    </section>
+
+    <section class="brand_statement">
+        <div class="container-fluid">
+            <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
+        </div>
+        <br />
+        <hr />
     </section>
 
     <main>
-      <div class="contianer-fluid" id="about_me">
-        <h3>More about me:</h3>
-        <p>I grew up in southern New Jersey.</p>
-        <p>But now I live in Washington, D.C.</p>
-        <p>For awhile, I worked in government and volunteered in higher education.</p>
-        <p>But now, I'm a full-stack web developer.</p>
-        <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
-        <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing and learning.</p>
-        <p>I love traveling and going to live shows.</p>
-        <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
-        <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
-        <p>I'm also looking for cool opportunities to collaborate interesting ideas with great people.</p>
-      </div>
-      <br />
-      <hr />
+        <div class="contianer-fluid" id="about_me">
+            <h3>More about me:</h3>
+            <p>I grew up in southern New Jersey.</p>
+            <p>I now live in Washington, D.C.</p>
+            <p>For awhile, I worked in municiple government and volunteered in higher education.</p>
+            <p>But now, I'm a full-stack web developer.</p>
+            <p>That being said, I write <a href="http://codepen.io/mvaden/">code</a>. Sometimes, I <a href="https://github.com/mvaden">collaborate</a> with other coders.</p>
+            <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
+            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [with a pen and journal] and learning.</p>
+            <p>I love traveling, even though I don't get to do it nearly enough.</p>
+            <p>My favorite web-based activities involve Spotify playlist curating and browsing <a href="https://www.instagram.com/abovtheinfluinc/" target="blank">Instagram</a>.</p>
+            <p>I'm really not that into Tumblr, <a href="http://6seven.tumblr.com/" target="blank">but sometimes I still do that</a>.</p>
+            <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
+            <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
+            <p>I have a more detailed <a href="https://www.linkedin.com/in/mrvaden">resume</a>, if you're into that sort of thing.</p>
+            <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
+        </div>
+        <br />
+        <hr />
     </main>
 
-    <address>
-      <div class="container-fluid" id="email1">
-        <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
-      </div>
-      <br />
-    </address>
+    <section>
+        <div class="container-fluid" id="projects">
+            <h3>Some of my work:</h3>
+            <a href="https://github.com/mvaden/Project_1">Political Geographic Trivia</a>
 
-    <nav>
-      <div class="container-fluid" id="social_media">
-        <p>You can also:</p>
-          <ul>
-            <a href="https://www.facebook.com/mvaden?ref=br_rs" target="blank"><li>Facebook me </li></a>
-            <a href="https://www.instagram.com/abovtheinfluinc/" target="blank"><li>Instagram me </li></a>
-            <a href="https://twitter.com/AbovTheInfluinc" target="blank"><li>Tweet me </li></a>
-            <a href="http://codepen.io/mvaden/pens/public/" target="blank"><li>CodePen me </li></a>
-            <a href="https://github.com/mvaden/Project_1" target="blank"><li>Play a little trivia </li></a>
-            <a href="https://github.com/mvaden" target="blank"><li>Check out my GitHub </li></a>
-          </ul>
-      </div>
-    </nav>
+        </div>
+    </section>
+
+    <!-- <nav>
+        <h3>My Web Presence:</h3>
+        <div class="social">
+            <ul> -->
+                <!-- <li><a href="https://twitter.com/AbovTheInfluinc"><i class="fa fa-lg fa-twitter" target="blank"></i></a></li>
+                <li><a href="http://stackoverflow.com/users/5831786/matthew-vaden"><i class="fa fa-lg fa-stack-overflow" target="blank"></i></a></li> -->
+            <!-- </ul>
+        </div>
+    </nav> -->
+
+
+
+    <!-- <address>
+  <div class="container-fluid" id="email1">
+    <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
+  </div>
+  <br />
+</address> -->
 
 </body>
 
