Added missing blank targets to several hrefs.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>I now live in Washington, D.C.</p>
             <p>For awhile, I worked in municiple government and volunteered in higher education.</p>
             <p>But now, I'm a full-stack web developer.</p>
-            <p>That being said, I write <a href="http://codepen.io/mvaden/">code</a>. Sometimes, I <a href="https://github.com/mvaden">collaborate</a> with other coders.</p>
+            <p>That being said, I write <a href="http://codepen.io/mvaden/" target="blank">code</a>. Sometimes, I <a href="https://github.com/mvaden" target="blank">collaborate</a> with other coders.</p>
             <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
             <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [with a pen and journal] and learning.</p>
             <p>I love traveling, even though I don't get to do it nearly enough.</p>
@@ -60,7 +60,7 @@
             <p>I'm really not that into Tumblr, <a href="http://6seven.tumblr.com/" target="blank">but sometimes I still do that</a>.</p>
             <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
             <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
-            <p>I have a more detailed <a href="https://www.linkedin.com/in/mrvaden">resume</a>, if you're into that sort of thing.</p>
+            <p>I have a more detailed <a href="https://www.linkedin.com/in/mrvaden" target="blank">resume</a>, if you're into that sort of thing.</p>
             <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
         </div>
         <br />
@@ -70,7 +70,7 @@
     <section>
         <div class="container-fluid" id="projects">
             <h3>Some of my work:</h3>
-            <a href="https://github.com/mvaden/Project_1">Political Geographic Trivia</a>
+            <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
 
         </div>
     </section>
