Preset pending hrefs; restyled existing hrefs, headers and body tags.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Bootstrap enabled CSS -->
-    <link rel="stylesheet" href="bootstrap-social.css">
+    <link rel="stylesheet" href="bootstrap-social.css" media="screen">
 
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <!-- jQuery library -->
@@ -23,14 +23,14 @@
 <body>
 
     <header>
-        <div class="container" id="header">
+        <div class="container" id="header" align="center">
             <h1>Matthew (aka, "Matt") Vaden</h1>
         </div>
         <br />
     </header>
 
     <section class="my_headshot">
-        <div class="container" id="image">
+        <div class="container" id="headshot" align="center">
             <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="my headshot" style="height:400px; width:267;">
         </div>
         <br />
@@ -38,7 +38,7 @@
     </section>
 
     <section class="brand_statement">
-        <div class="container-fluid">
+        <div class="container-fluid" align="center">
             <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
         </div>
         <br />
@@ -46,15 +46,15 @@
     </section>
 
     <main>
-        <div class="contianer-fluid" id="about_me">
+        <div class="contianer-fluid" id="about_me" align="justify">
             <h3>More about me:</h3>
             <p>I grew up in southern New Jersey.</p>
             <p>I now live in Washington, D.C.</p>
             <p>For awhile, I worked in municiple government and volunteered in higher education.</p>
             <p>But now, I'm a full-stack web developer.</p>
             <p>That being said, I write <a href="http://codepen.io/mvaden/" target="blank">code</a>. Sometimes, I <a href="https://github.com/mvaden" target="blank">collaborate</a> with other coders.</p>
-            <p>I watch a lot of cinema with Shukura (who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>), and we have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
-            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [with a pen and journal] and learning.</p>
+            <p>I watch a lot of cinema with Shukura, who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>. We also have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
+            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [offline with a pen and journal] and learning.</p>
             <p>I love traveling, even though I don't get to do it nearly enough.</p>
             <p>My favorite web-based activities involve Spotify playlist curating and browsing <a href="https://www.instagram.com/abovtheinfluinc/" target="blank">Instagram</a>.</p>
             <p>I'm really not that into Tumblr, <a href="http://6seven.tumblr.com/" target="blank">but sometimes I still do that</a>.</p>
@@ -71,7 +71,9 @@
         <div class="container-fluid" id="projects">
             <h3>Some of my work:</h3>
             <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
-
+            <a href="#" target="blank">Wine Up!</a>
+            <a href="#" target="blank">Where Are They Now?</a>
+        <br />
         </div>
     </section>
 
@@ -84,15 +86,6 @@
             <!-- </ul>
         </div>
     </nav> -->
-
-
-
-    <!-- <address>
-  <div class="container-fluid" id="email1">
-    <p>Feel free to <a href="mailto:m@matthewvaden.com" target="blank">contact me</a>, directly.</p>
-  </div>
-  <br />
-</address> -->
 
 </body>
 
