Styled background and certain IDs, deleted line breaks.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Bootstrap enabled CSS -->
-    <link rel="stylesheet" href="bootstrap-social.css" media="screen">
-
+    <!-- <link rel="stylesheet" href="bootstrap-social.css" media="screen"> -->
+    <!-- Style enabled CSS -->
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -23,14 +23,14 @@
 <body>
 
     <header>
-        <div class="container" id="header" align="center">
+        <div class="container" id="header">
             <h1>Matthew (aka, "Matt") Vaden</h1>
         </div>
         <br />
     </header>
 
     <section class="my_headshot">
-        <div class="container" id="headshot" align="center">
+        <div class="container" id="headshot">
             <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="my headshot" style="height:400px; width:267;">
         </div>
         <br />
@@ -41,8 +41,6 @@
         <div class="container-fluid" align="center">
             <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
         </div>
-        <br />
-        <hr />
     </section>
 
     <main>
@@ -63,7 +61,6 @@
             <p>I have a more detailed <a href="https://www.linkedin.com/in/mrvaden" target="blank">resume</a>, if you're into that sort of thing.</p>
             <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
         </div>
-        <br />
         <hr />
     </main>
 
@@ -73,7 +70,6 @@
             <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
             <a href="#" target="blank">Wine Up!</a>
             <a href="#" target="blank">Where Are They Now?</a>
-        <br />
         </div>
     </section>
 
