Added wherearetheynow href link.

--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
 
     <section class="my_headshot">
         <div class="container" id="headshot">
-            <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait" alt="my headshot" style="height:400px; width:267;">
+            <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait_1" alt="my headshot">
         </div>
         <br />
         <br />
     </section>
 
     <section class="brand_statement">
-        <div class="container-fluid" align="center">
+        <div class="container-fluid" align="center" id="brand_statement">
             <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
         </div>
+        <br />
+        <hr />
     </section>
 
     <main>
@@ -51,35 +53,73 @@
             <p>For awhile, I worked in municiple government and volunteered in higher education.</p>
             <p>But now, I'm a full-stack web developer.</p>
             <p>That being said, I write <a href="http://codepen.io/mvaden/" target="blank">code</a>. Sometimes, I <a href="https://github.com/mvaden" target="blank">collaborate</a> with other coders.</p>
-            <p>I watch a lot of cinema with Shukura, who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>. We also have a spunky little cockapoo named <a href="https://www.instagram.com/waylonthecockapoo" target="blank">Waylon</a>.</p>
-            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [offline with a pen and journal] and learning.</p>
-            <p>I love traveling, even though I don't get to do it nearly enough.</p>
+            <p>I watch a lot of cinema with Shukura, who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>. We also have a spunky little cockapoo named Waylon</a>.</p>
+            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [offline, pen and journal] and learning.</p>
+            <p>I love traveling, even though I don't do it nearly enough.</p>
             <p>My favorite web-based activities involve Spotify playlist curating and browsing <a href="https://www.instagram.com/abovtheinfluinc/" target="blank">Instagram</a>.</p>
             <p>I'm really not that into Tumblr, <a href="http://6seven.tumblr.com/" target="blank">but sometimes I still do that</a>.</p>
             <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
             <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
-            <p>I have a more detailed <a href="https://www.linkedin.com/in/mrvaden" target="blank">resume</a>, if you're into that sort of thing.</p>
+            <p>I have a more detailed <a href="resume.html" target="blank">resume</a>, if you're into that sort of thing.</p>
             <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
         </div>
         <hr />
     </main>
 
-    <section>
+    <section class="projects">
         <div class="container-fluid" id="projects">
             <h3>Some of my work:</h3>
             <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
             <a href="#" target="blank">Wine Up!</a>
-            <a href="#" target="blank">Where Are They Now?</a>
+            <a href="https://wherearetheynow.herokuapp.com/" target="blank">Where Are They Now?</a>
         </div>
+        <hr />
+    </section>
+
+    <section class="skills">
+        <h3>My skills:</h3>
+        <div class="container-fluid" id="front_end">
+            <h5 class="front_end">Front End</h5>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>JavaScript</p>
+                <p>jQuery</p>
+                <p>SASS</p>
+                <p>SCSS</p>
+                <p>Angular.js</p>
+                <p>Express.js</p>
+                <p>React</p>
+                <p>JSON</p>
+                <p>D3.js</p>
+            </div>
+        <div class="container-fluid" id="back_end">
+            <h5>Back End</h5>
+                <p>Ruby</p>
+                <p>Rails</p>
+                <p>Sinatra</p>
+                <p>MongoDB</p>
+                <p>Node.js</p>
+                <p>SQL</p>
+                <p>PostgreSQL</p>
+            </div>
+        <div class="container-fluid" id="other">
+            <h5>Other</h5>
+                <p>Photoshop</p>
+                <p>Lightroom</p>
+                <p>Illustrator</p>
+                <p>Git/Github</p>
+                <p>Atom</p>
+            </div>
+        <hr />
     </section>
 
     <!-- <nav>
         <h3>My Web Presence:</h3>
         <div class="social">
-            <ul> -->
-                <!-- <li><a href="https://twitter.com/AbovTheInfluinc"><i class="fa fa-lg fa-twitter" target="blank"></i></a></li>
-                <li><a href="http://stackoverflow.com/users/5831786/matthew-vaden"><i class="fa fa-lg fa-stack-overflow" target="blank"></i></a></li> -->
-            <!-- </ul>
+            <ul>
+                <li><a href="https://twitter.com/AbovTheInfluinc"><i class="fa fa-lg fa-twitter" target="blank"></i></a></li>
+                <li><a href="http://stackoverflow.com/users/5831786/matthew-vaden"><i class="fa fa-lg fa-stack-overflow" target="blank"></i></a></li>
+            </ul>
         </div>
     </nav> -->
 
