More style changes.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header>
         <div class="container" id="header">
-            <h1>Matthew (aka, "Matt") Vaden</h1>
+            <h1 class="full_name">Matthew <span class="nickname">(aka, "Matt")</span> Vaden</h1>
         </div>
         <br />
     </header>
@@ -41,8 +41,8 @@
         <div class="container-fluid" align="center" id="brand_statement">
             <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
         </div>
-        <br />
-        <hr />
+        <!-- <br />
+        <hr /> -->
     </section>
 
     <main>
@@ -63,17 +63,17 @@
             <p>I have a more detailed <a href="resume.html" target="blank">resume</a>, if you're into that sort of thing.</p>
             <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
         </div>
-        <hr />
+        <!-- <hr /> -->
     </main>
 
     <section class="projects">
         <div class="container-fluid" id="projects">
             <h3>Some of my work:</h3>
             <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
-            <a href="#" target="blank">Wine Up!</a>
+            <!-- <a href="#" target="blank">Wine Up!</a> -->
             <a href="https://wherearetheynow.herokuapp.com/" target="blank">Where Are They Now?</a>
         </div>
-        <hr />
+        <!-- <hr /> -->
     </section>
 
     <section class="skills">
@@ -110,7 +110,7 @@
                 <p>Git/Github</p>
                 <p>Atom</p>
             </div>
-        <hr />
+        <!-- <hr /> -->
     </section>
 
     <!-- <nav>
