Changes to resume content.

--- a/resume.html
+++ b/resume.html
@@ -8,28 +8,53 @@
 <body>
 
   <h1>Matthew R. Vaden
-    <small>A abridged list of experiences...</small>
+    <small>My experience, abridged.</small>
   </h1>
+  <h3><a href="www.matthewvaden.com">www.matthewvaden.com</a> • <a href="mailto:m@matthewvaden.com" target="blank">m@matthewvaden.com</a></h3>
 
   <h3>Synopisis</h3>
     <!-- Brand statement goes here -->
     <span class="statement">"I am a practical and friendly individual who thrives in collaborative environments where there are opportunities to learn and also to teach. I empathize with clients who require innovative and current methods in order to render complex problems into pleasant experiences and efficient results. My goal is for my abilities to benefit the needs of your organization."
     </span>
 
-  <h3>Career History</h3>
+  <!-- list of technical skills -->
+  <h3>Technical Skills</h3>
+  <p>HTML5 • CSS3 • Javascript • jQuery • Ruby • Ruby on Rails • Sinatra • Active Record • PostgreSQL • MEAN Stack • AJAX • API development and implementation • ReactJS • JSON • D3 • SASS • SCSS • Git • Mac OS X • PeopleSoft • Photoshop • Lightroom • Illustrator</p>
+
+  <!-- <h3>Career History</h3> -->
+  <h3>Technical Experience</h3>
     <div class="position">
       <!-- Name of postion - Name of employer -->
-      <span class="title">Freelance, Full-Stack Web Developer</span>
+      <span class="title">Web Development Immersive (student)</span>
       <!-- Months + Years employerd -->
-      <span class="time_period">June 2016 - present</span>
+      <span class="time_period">March 2016 - June 2016</span>
+        <p>Emphasis on Object-Oriented Programming, MVC frameworks, Data Modeling, and test driven development.</p>
+        <p>Developed seamless front-end experiences with HTML, CSS, JavaScript, jQuery, and AngularJS.</p>
+        <p>Developed functional bank-end web applications with Ruby on Rails, MongoDB, PostgreSQL, NodeJS, ExpressJS, and APIs through Entity Relational Diagraming.</p>
+        <p>Produced four portfolio web app projects under the following topics: Vanilla JavaScript, Ruby on Rails, Angular on Rails with API, and Angular on Rails.</p>
     </div>
 
-
+  <h3>Professional Experience</h3>
     <div class="position">
       <!-- Name of postion - Name of employer -->
       <span class="title">Program Monitor, Department of Employment Services</span>
       <!-- Months + Years employerd -->
       <span class="time_period">June 2011 to August 2011</span>
+        <p>Coordinated with instructional staff to train 12,500 DC youth to receive seasonal employment for Summer Youth Employment Program.</p>
+        <p>Monitored between fifty-nine worksites at least twice to monitor employee and employer relations.</p>
+        <p>Developed professional relationships with employer/hosts for each worksite; quickly learned new concepts in a dynamic environment.</p>
+        <p>Troubleshooted problems and provided technical assistance with steadfast confidentiality.</p>
+        <p>Performed various office duties; answered phone calls; update spreadsheets.</p>
+    </div>
+    <div class="position">
+      <!-- Name of postion - Name of employer -->
+      <span class="title">Recreation Manager, Rutgers Recreation</span>
+      <!-- Months + Years employerd -->
+      <span class="time_period">August 2006 - May 2007</span>
+        <p>Monitored facilities; ensured proper safety and customer service for patrons.</p>
+        <p>Officiated intramural athletic leagues.</p>
+        <p>Maintained the safety standards and water conditions at public bathing facilities.</p>
+        <p>Facilitated various community-service based events - Special Friends Day, Red Cross Blood Drive.</p>
     </div>
 
   <h3>Volunteerism</h3>
@@ -39,6 +64,11 @@
       <!-- Month + Years employerd -->
       <span class="time_period">General Body Member, 2006 - 2007</span>
       <span class="time_period">Treasurer and Vice President, 2007 - 2008</span>
+      <p>Publicized educational events for Rutgers students and staff with audiences of up to 200.</p>
+      <p>Managed expenses and financial account with a budget of $1,800 per semester.</p>
+      <p>Created and directed biweekly educational programs for general body meetings.</p>
+      <p>Arranged weekly meetings for executive board officers of the organization.</p>
+      <p>Volunteered as a mentor to at-risk area high school students as part of Upward Bound and the New Jersey Educational Opportunity Fund.</p>
     </div>
 
   <h3>Education</h3>
@@ -49,7 +79,7 @@
     </div>
 
     <div class="education">
-      <span class="title">Rutgers, The State University Of New Jersey</span>
+      <span class="title">Rutgers, The State University Of New Jersey - New Brunswick, N.J.</span>
       <span class="subtitle">School Of Communciation and Information</span>
       <span class="supplemental">Bachelor of Art, Communication</span>
       <span class="time_period">2005-2008</span>
