Updates to resume.

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <h1>Matthew R. Vaden
     <small>My experience, abridged.</small>
   </h1>
-  <h3><a href="www.matthewvaden.com">www.matthewvaden.com</a> • <a href="mailto:m@matthewvaden.com" target="blank">m@matthewvaden.com</a></h3>
+  <h3><a href="www.matthewvaden.com">matthewvaden.com</a> • <a href="mailto:m@matthewvaden.com" target="blank">m@matthewvaden.com</a></h3>
 
   <h3>Synopisis</h3>
     <!-- Brand statement goes here -->
@@ -39,7 +39,7 @@
       <!-- Name of postion - Name of employer -->
       <span class="title">Program Monitor, Department of Employment Services</span>
       <!-- Months + Years employerd -->
-      <span class="time_period">June 2011 to August 2011</span>
+      <span class="time_period">June 2011 - August 2011</span>
         <p>Coordinated with instructional staff to train 12,500 DC youth to receive seasonal employment for Summer Youth Employment Program.</p>
         <p>Monitored between fifty-nine worksites at least twice to monitor employee and employer relations.</p>
         <p>Developed professional relationships with employer/hosts for each worksite; quickly learned new concepts in a dynamic environment.</p>
@@ -81,7 +81,7 @@
     <div class="education">
       <span class="title">Rutgers, The State University Of New Jersey - New Brunswick, N.J.</span>
       <span class="subtitle">School Of Communciation and Information</span>
-      <span class="supplemental">Bachelor of Art, Communication</span>
+      <span class="degree">Bachelor of Art, Communication</span>
       <span class="time_period">2005-2008</span>
     </div>
 
