Minor changes to index.html.

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <h1>Matthew R. Vaden
     <small>My experience, abridged.</small>
   </h1>
-  <h3><a href="www.matthewvaden.com">matthewvaden.com</a> • <a href="mailto:m@matthewvaden.com" target="blank">m@matthewvaden.com</a></h3>
+  <h3><a href="www.matthewvaden.com">My Portfolio</a> • <a href="mailto:m@matthewvaden.com" target="blank">Let's Talk</a></h3>
 
   <h3>Synopisis</h3>
     <!-- Brand statement goes here -->
