--- a/index.html
+++ b/index.html
@@ -3,125 +3,190 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Matthew Vaden</title>
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Bootstrap enabled CSS -->
-    <!-- <link rel="stylesheet" href="bootstrap-social.css" media="screen"> -->
-    <!-- Style enabled CSS -->
-    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!--load font awesome-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+   <meta charset="utf-8">
+   <meta name="viewport"
+         content="width=device-width, initial-scale=1">
+   <title>Matthew Vaden</title>
+   <!-- Latest compiled and minified CSS -->
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+         crossorigin="anonymous">
+   <!-- Bootstrap enabled CSS -->
+   <!-- <link rel="stylesheet" href="bootstrap-social.css" media="screen"> -->
+   <!-- Style enabled CSS -->
+   <link rel="stylesheet"
+         href="style.css"
+         media="screen"
+         title="no title"
+         charset="utf-8">
+   <!-- jQuery library -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+   <!-- Latest compiled JavaScript -->
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <!--load font awesome-->
+   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+         rel="stylesheet">
 </head>
 
 <body>
+<div>
 
-    <header>
-        <div class="container" id="header">
-            <h1 class="full_name">Matthew <span class="nickname">(aka, "Matt")</span> Vaden</h1>
-        </div>
-        <br />
-    </header>
+   <header>
+      <div class="container"
+           id="header">
+         <h1 class="full_name">Matthew <span class="nickname">(aka, "Matt")</span> Vaden</h1>
+      </div>
+   </header>
 
-    <section class="my_headshot">
-        <div class="container" id="headshot">
-            <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg" id="portrait_1" alt="my headshot">
-        </div>
-        <br />
-        <br />
-    </section>
+   <section class="my_headshot">
+      <div class="container"
+           id="headshot">
+         <img src="http://s19.postimg.org/e39marg0j/MVaden_Headshot_00016_copy.jpg"
+              id="portrait_1"
+              alt="my headshot">
+      </div>
+   </section>
 
-    <section class="brand_statement">
-        <div class="container-fluid" align="center" id="brand_statement">
-            <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
-        </div>
-        <!-- <br />
-        <hr /> -->
-    </section>
+   <section class="brand_statement">
+      <div class="container-fluid"
+           align="center"
+           id="brand_statement">
+         <p>I am a proactive and friendly individual who thrives on learning through open collaboration. I show resolve
+            under pressure and I am confident that my abilities can benefit the needs of your organization.</p>
+      </div>
 
-    <main>
-        <div class="contianer-fluid" id="about_me" align="justify">
-            <h3>More about me:</h3>
-            <p>I grew up in southern New Jersey.</p>
-            <p>I now live in Washington, D.C.</p>
-            <p>For awhile, I worked in municiple government and volunteered in higher education.</p>
-            <p>But now, I'm a full-stack web developer.</p>
-            <p>That being said, I write <a href="http://codepen.io/mvaden/" target="blank">code</a>. Sometimes, I <a href="https://github.com/mvaden" target="blank">collaborate</a> with other coders.</p>
-            <p>I watch a lot of cinema with Shukura, who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>. We also have a spunky little cockapoo named Waylon</a>.</p>
-            <p>I enjoy <a href="https://www.goodreads.com/review/list/16216182" target="blank">reading</a>, writing [offline, pen and journal] and learning.</p>
-            <p>I love traveling, even though I don't do it nearly enough.</p>
-            <p>My favorite web-based activities involve Spotify playlist curating and browsing <a href="https://www.instagram.com/abovtheinfluinc/" target="blank">Instagram</a>.</p>
-            <p>I'm really not that into Tumblr, <a href="http://6seven.tumblr.com/" target="blank">but sometimes I still do that</a>.</p>
-            <p>After a really busy week, I might enjoy a <a href="http://www.completecocktails.com/Drinks/BlueberrySmash.aspx#.Vr7pAmeqSf4" target="blank">Blueberry Smash</a> or two!</p>
-            <p>I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org" target="blank"> ultimate frisbee</a>.</p>
-            <p>I have a more detailed <a href="resume.html" target="blank">resume</a>, if you're into that sort of thing.</p>
-            <p>If you have an interesting idea or problem that yearns for a solution, then <a href="mailto:m@matthewvaden.com" target="blank">let's talk</a>!</p>
-        </div>
-        <!-- <hr /> -->
-    </main>
+   </section>
 
-    <section class="projects">
-        <div class="container-fluid" id="projects">
-            <h3>Some of my work:</h3>
-            <a href="https://github.com/mvaden/Project_1" target="blank">Political Geographic Trivia</a>
-            <!-- <a href="#" target="blank">Wine Up!</a> -->
-            <a href="https://wherearetheynow.herokuapp.com/" target="blank">Where Are They Now?</a>
-        </div>
-        <!-- <hr /> -->
-    </section>
+   <main>
+      <div class="contianer-fluid"
+           id="about_me"
+           align="justify">
+         <h3>More about me:</h3>
+         <p>
+            I am from southern New Jersey.
+         </p>
+         <p>
+            I now live in Washington, D.C.
+         </p>
+         <p>
+            For awhile, I worked in municiple government and volunteered in higher education.
+         </p>
+         <p>
+            But now, I am a Full-Stack Web Developer.
+         </p>
+         <p>
+            I specialize in Node.js and JavaScript, but I also like messing around with other frameworks and languages.
+         </p>
+         <p>
+            I'm trying my darndest to be more<a href="http://codepen.io/mvaden/">creative</a> and
+            <a href="https://github.com/mvaden">collaborative</a>.
+         </p>
+         <!--<p>-->
+            <!--That being said, I write <a href="http://codepen.io/mvaden/" target="blank">code</a>. Sometimes, I <a href="https://github.com/mvaden" target="blank">collaborate</a> with other coders.-->
+         <!--</p>-->
+         <!--<p>-->
+         <!--I watch a lot of cinema with Shukura, who runs a cool <a href="https://www.instagram.com/thebeardfellowship/" target="blank">project</a>. We also have a spunky little cockapoo named Waylon.-->
+         <!--</p>-->
+         <p>
+            I enjoy <a href="https://www.goodreads.com/review/list/16216182"
+                       target="blank">re</a><a href="https://www.goodreads.com/review/list/16216182"
+                                               target="blank">ading</a>, writing (offline - pen and journal) and learning.
+         </p>
+         <p>
+            I love traveling, although I don't do it nearly enough.
+         </p>
+         <p>
+            My favorite web-based activities involve Spotify playlist curating, listening to podcasts and browsing
+            <a href="https://www.instagram.com/abovtheinfluinc/"
+               target="blank">Instagram</a>.
+         </p>
+         <p>
+            I'm not that big on Tumblr, <a href="http://6seven.tumblr.com/"
+                                      target="blank">but sometimes I still do that</a>.
+         </p>
+         <p>
+            After a hectic week, I might enjoy a <a href="http://cooking.nytimes.com/recipes/1018216-moscow-mule"
+                                                         target="blank">Moscow Mule</a> or two!
+         </p>
+         <p>
+            I can't help but say "yes" to things like pizza and <a href="http://www.wafc.org"
+                                                                   target="blank">ultimate frisbee</a>.
+         </p>
+         <p>
+            I have a slightly more detailed <a href="resume_abridged.html"
+                                               target="blank">resume</a>, if you're into that sort of thing.</p>
+         <p>
+            If you have an interesting idea or problem that yearns for a solution, then
+            <a href="mailto:m@matthewvaden.com"
+               target="blank">let's talk</a>!
+         </p>
+      </div>
+   </main>
 
-    <section class="skills">
-        <h3>My skills:</h3>
-        <div class="container-fluid" id="front_end">
-            <h5 class="front_end">Front End</h5>
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>JavaScript</p>
-                <p>jQuery</p>
-                <p>SASS</p>
-                <p>SCSS</p>
-                <p>Angular.js</p>
-                <p>Express.js</p>
-                <p>React</p>
-                <p>JSON</p>
-                <p>D3.js</p>
-            </div>
-        <div class="container-fluid" id="back_end">
-            <h5>Back End</h5>
-                <p>Ruby</p>
-                <p>Rails</p>
-                <p>Sinatra</p>
-                <p>MongoDB</p>
-                <p>Node.js</p>
-                <p>SQL</p>
-                <p>PostgreSQL</p>
-            </div>
-        <div class="container-fluid" id="other">
-            <h5>Other</h5>
-                <p>Photoshop</p>
-                <p>Lightroom</p>
-                <p>Illustrator</p>
-                <p>Git/Github</p>
-                <p>Atom</p>
-            </div>
-        <!-- <hr /> -->
-    </section>
+   <!--My projects.-->
+   <section class="projects">
+      <div class="container-fluid"
+           id="projects">
+         <h3>Some of my work:</h3>
+         <a href="https://github.com/mvaden/Project_1"
+            target="blank">Political Geographic Trivia</a>
+         <!-- <a href="#" target="blank">Wine Up!</a> -->
+         <a href="https://wherearetheynow.herokuapp.com/"
+            target="blank">Where Are They Now?</a>
+      </div>
+   </section>
 
-    <!-- <nav>
-        <h3>My Web Presence:</h3>
-        <div class="social">
-            <ul>
-                <li><a href="https://twitter.com/AbovTheInfluinc"><i class="fa fa-lg fa-twitter" target="blank"></i></a></li>
-                <li><a href="http://stackoverflow.com/users/5831786/matthew-vaden"><i class="fa fa-lg fa-stack-overflow" target="blank"></i></a></li>
-            </ul>
-        </div>
-    </nav> -->
+   <!--My skills.-->
+   <div class="container skills">
+      <h3>My skills:</h3>
+      <div class="front_end">
+         <ul class="front_end">Front End
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>SASS</li>
+            <li>SCSS</li>
+            <li>Angular.js</li>
+            <li>Express.js</li>
+            <li>React</li>
+            <li>JSON</li>
+            <li>D3.js</li>
+         </ul>
+      </div>
+      <div class="back_end">
+         <ul>Back End
+            <li>Ruby</li>
+            <li>Rails</li>
+            <li>Sinatra</li>
+            <li>MongoDB</li>
+            <li>Node.js</li>
+            <li>SQL</li>
+            <li>PostgreSQL</li>
+         </ul>
+      </div>
+      <div class
+      "other">
+      <ul>Other
+         <li>Photoshop</li>
+         <li>Lightroom</li>
+         <li>Illustrator</li>
+         <li>Git/Github</li>
+         <li>Atom</li>
+      </ul>
+   </div>
+   <div class
+   "other">
+   <ul>Other
+      <li>Photoshop</li>
+      <li>Lightroom</li>
+      <li>Illustrator</li>
+      <li>Git/Github</li>
+      <li>Atom</li>
+   </ul>
+</div>
+
 
 </body>
 
