--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,10 @@
   <h3>Technical Skills</h3>
   <p>HTML5 • CSS3 • Javascript • jQuery • Ruby • Ruby on Rails • Sinatra • Active Record • PostgreSQL • MEAN Stack • AJAX • API development and implementation • ReactJS • JSON • D3 • SASS • SCSS • Git • Mac OS X • PeopleSoft • Photoshop • Lightroom • Illustrator</p>
 
+  <!--List of other skills-->
+  <h3>Methodologies</h3>
+  <p>Agile/Scrum</p>
+
   <!-- <h3>Career History</h3> -->
   <h3>Technical Experience</h3>
     <div class="position">
