--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 
   <!--List of other skills-->
   <h3>Methodologies</h3>
-  <p>Agile/Scrum</p>
+  <p>Agile • Scrum</p>
 
   <!-- <h3>Career History</h3> -->
   <h3>Technical Experience</h3>
